conversations c.d.
